- Login and register templates

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,12 @@
 {% extends "base.html" %}
 
-{% block title %}Главная{% endblock %}
-
 {% block content %}
-<h1>Welcome to flag-sweeper!</h1>
+<h1>Welcome to Flag Sweeper!</h1>
+<p>This is title page with relevant meta-info.</p>
+
+<p>We are online attack-defense CTF-website. You absolutely can <a href="https://github.com/DanielBash/flag-sweeper">self-host</a>! It
+is entirely written in flask and python. Thanks <a href="https://classless.de/">classless.css</a> for providing effective and minimalistic stylesheet.</p>
+<p>This website is run by the main developer <a href="http://github.com/DanielBash">DanielBash</a>. The server is paid monthly, and can be slow, so every help is appreciated.</p>
+<p>Our source is originally developed in terms of yandex liceum final project.</p>
+
 {% endblock %}
