--- a/templates/base.html
+++ b/templates/base.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="{{ url_for('static', filename='css/tabs.css') }}" rel="stylesheet">
   <link rel="stylesheet" href="{{ url_for('static', filename='css/classless.css') }}">
-  <link rel="icon" type="image/x-icon" href="{{ url_for('static', filename='images/favicon.ico') }} }}">
+  <link rel="icon" type="image/x-icon" href="{{ url_for('static', filename='images/favicon.ico') }}">
 </head>
 <body>
 {% block header %}
