--- a/templates/register.html
+++ b/templates/register.html
@@ -1,39 +1,44 @@
 {% extends "base.html" %}
 
 {% block content %}
+
+  {% for fieldname, errors in form.errors.items() %}
+    {% for error in errors %}
+<aside>
+<div class="card warn">
+ <p>{{ form[fieldname].label.text or fieldname }}</p>
+ <p>{{ error }}</p>
+</div>
+</aside>
+    {% endfor %}
+  {% endfor %}
+
 <h1>Register to Flag Sweeper</h1>
 <p>This is registration page. Main page can be found <a href="{{ url_for('main.index') }}">here</a>. If you have account, there is login form right
 <a href="{{ url_for('auth.login') }}">here</a>.</p>
+<form method="POST">
+      {{ form.hidden_tag() }}
+      <fieldset>
+          <legend>Register</legend>
+        <div class="row">
+          <div class="col">
+            {{ form.username.label }}
+            {{ form.username(size=32) }}
+            {{ form.password.label }}
+            {{ form.password(size=32) }}
+          </div>
+          <div class="col">
+            {{ form.email.label }}
+            {{ form.email(size=32) }}
+            {{ form.confirm_password.label }}
+            {{ form.confirm_password(size=32) }}
+          </div>
+        </div>
+      </fieldset>
 
-    <form method="POST" action="">
-        {{ form.hidden_tag() }}
-        <p>
-            {{ form.username.label }}<br>
-            {{ form.username(size=32) }}<br>
-            {% for error in form.username.errors %}
-                <span style="color: red;">[{{ error }}]</span>
-            {% endfor %}
-        </p>
-        <p>
-            {{ form.email.label }}<br>
-            {{ form.email(size=32) }}<br>
-            {% for error in form.email.errors %}
-                <span style="color: red;">[{{ error }}]</span>
-            {% endfor %}
-        </p>
-        <p>
-            {{ form.password.label }}<br>
-            {{ form.password(size=32) }}<br>
-            {% for error in form.password.errors %}
-                <span style="color: red;">[{{ error }}]</span>
-            {% endfor %}
-        </p>
-        <p>
-            {{ form.confirm_password.label }}<br>
-            {{ form.confirm_password(size=32) }}<br>
-            {% for error in form.confirm_password.errors %}
-                <span style="color: red;">[{{ error }}]</span>
-            {% endfor %}
-        <p>{{ form.submit() }}</p>
+      <fieldset id="forms__action">
+        <legend>Submit</legend>
+          {{ form.submit() }}
+      </fieldset>
     </form>
 {% endblock %}
