- Added onion version documentation update.  Onion website proxy is running on the server

--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
 <p>We are online attack-defense CTF-website. You absolutely can <a href="https://github.com/DanielBash/flag-sweeper">self-host</a>! It
 is entirely written in flask and python. Thanks <a href="https://classless.de/">classless.css</a> for providing effective and minimalistic stylesheet.</p>
 <p>This website is run by the main developer <a href="http://github.com/DanielBash">DanielBash</a>. The server is paid monthly, and can be slow, so every help is appreciated.</p>
-<p>Our source is originally developed in terms of yandex liceum final project.</p>
+<p>Our source is originally developed in terms of yandex liceum final project. There is an onion version of the website, <a href="http://t44pucn4ou3hq4argmqe4klegevka2jzlpfpepepjhoj4fqktyvzhhad.onion">here</a>.</p>
 
 {% if user %}
 <p>Or hey, you are registered. There are some useful links: <a href="{{url_for('users.user', username=user.username)}}">Your profile</a>,<br/>
